--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,20 @@
+@import "reset.css";
+@import "variable.css";
+
+/*components*/
+@import "components/status-bar.css";
+@import "components/nav-bar.css";
+@import "components/screen-header.css";
+@import "components/user-component.css";
+
+/*Screens*/
+@import "screens/login.css";
+@import "screens/friends.css";
+
 body{
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color:#2e363e;
+
 }
 
-.status-bar{
-    display: flex;
-    justify-content: center;
-}
 
-.status-bar__column{
-    width:33%;
-}
-
-.status-bar__column:first-child span{
-    margin-right:5px;
-}
-
-.status-bar__column:nth-child(2){
-    display:flex;
-    justify-content: center;
-}
-.status-bar__column:last-child{
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-.status-bar__column .fa-battery-full{
-    margin: 0px 5px;
-}
