--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -2,8 +2,9 @@
     display:flex;
     justify-content: space-between;
     align-items: center;
-    padding:25px;
+    padding:var(--horizontal-space);
     margin-top: 30px;
+    margin-bottom: 15px;
 
 }
 
@@ -12,6 +13,6 @@
     font-weight: 600;
 }
 
-.screen-header__icon{
-    margin: left 25px;
+.screen-header__icons span{
+    margin-left: 25px;
 }
