--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -26,6 +26,6 @@
     align-items: center;
 }
 
-.status-bar__column .fa-battery-full{
-    margin: 0px 5px;
+.status-bar__column span, .fa-battery-half{
+    margin-right: 5px;
 }
