--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -1,7 +1,53 @@
 .user-component{
     display:flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
 }
 
+.user-component__column,
 .user-component__column:first-child{
     display: flex;
+    align-items: center;
+}
+.user-component__avatar{
+    width: 70px;
+    height:70px;
+    border-radius: 25px;
+    margin-right: 20px;
+}
+.user-component__title{
+    font-weight: 600;
+    font-size: 22px;
+}
+.user-component__subtitle{
+    margin-top: 8px;
+    color:rgba(0, 0, 0, 0.5);
+    font-size: 17px;
+}
+.user-component__avatar--xl{
+    width: 80px;
+    height: 80px;
+    border-radius: 30px;
+}
+
+.user-component__avatar--sm{
+    width:60px;
+    height: 60px;
+    border-radius: 20px;
+}
+.user-component__title--not-bold{
+    font-weight: 400;
+}
+
+.user-component__column:last-child{
+    color: rgba(0, 0, 0, 0.4);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+    
+}
+.user-component__time{
+    margin-bottom: 10px;
+    display:block
 }
