--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -3,10 +3,27 @@
     display: block;
     background-color: #fafafa;
     padding: 15px 0px;
-    font-size: 16px;
+    font-size: 18px;
+    margin-bottom: 15px;
+    margin-top: -10px;
 }
 
 #friends-display-link i{
     color:rgba(0, 0, 0, 0.3)
+}
+.firends-screen{
+    padding: 0px var(--horizontal-space);
+}
+.firends-screen__channel{
+    margin-top: 25px;
+    border-top: var(--main-border);
+    padding-top: 15px;
+
+}
+.firends-screen__channel-header{
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: space-between;
+    color:rgba(0, 0, 0, 0.5);
 
 }
