--- a/css/screens/login.css
+++ b/css/screens/login.css
@@ -35,12 +35,13 @@
     transition:border-color 0.3s ease-in-out;
 }
 #login-form input::placeholder{
-    rgba(0, 0, 0, 0.4)
+    color:rgba(0, 0, 0, 0.4);
 }
 
 #login-form input:focus {
     border-color: var(--yellow);
 }
+
 #login-form input[type="submit"] {
     background-color: var(--yellow);
     cursor:pointer;
