--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -1,6 +1,6 @@
 .status-bar{
     position: fixed;
-    top: 0;
+    top: 0px;
     display: flex;
     justify-content: center;
     width:100%;
@@ -9,15 +9,15 @@
 }
 
 .status-bar__column{
-    width:33%;
+    width: 33%;
 }
 
 .status-bar__column:first-child span{
-    margin-right:5px;
+    margin-right: 5px;
 }
 
 .status-bar__column:nth-child(2){
-    display:flex;
+    display: flex;
     justify-content: center;
 }
 .status-bar__column:last-child{
